fix(gui): No account selected text overflows widget

--- a/gui/src/components/account/AccountWidget.css
+++ b/gui/src/components/account/AccountWidget.css
@@ -56,7 +56,8 @@
 	justify-content: flex-start;
 	margin-left: 0.5rem;
 	font-weight: bold;
-	overflow: hidden;
+	overflow-x: hidden;
+	text-wrap: nowrap;
 	width: 100%;
 }
 
